# services/task-service/src/routes/task.routes.ts
@@ -1,0 +1,59 @@
+import { Router } from "express";
+
+import { authenticate } from "../../../auth-service/src/middlewares/auth.middleware";
+import { validate } from "../../../../packages/validation/validation";
+import {
+  createTaskSchema,
+  updateTaskSchema,
+} from "../../../../packages/validation/schemas/task.schema";
+
+import {
+  createTaskHandler,
+  getWorkspaceTasksHandler,
+  getTaskHandler,
+  updateTaskHandler,
+  deleteTaskHandler,
+} from "../controllers/task.controller";
+
+import { requireWorkspaceMembership } from "../middlewares/workspace.middleware";
+
+const router = Router();
+
+router.post(
+  "/workspaces/:workspaceId/tasks",
+  authenticate,
+  requireWorkspaceMembership,
+  validate(createTaskSchema),
+  createTaskHandler
+);
+
+router.get(
+  "/workspaces/:workspaceId/tasks",
+  authenticate,
+  requireWorkspaceMembership,
+  getWorkspaceTasksHandler
+);
+
+router.get(
+  "/workspaces/:workspaceId/tasks/:id",
+  authenticate,
+  requireWorkspaceMembership,
+  getTaskHandler
+);
+
+router.patch(
+  "/workspaces/:workspaceId/tasks/:id",
+  authenticate,
+  requireWorkspaceMembership,
+  validate(updateTaskSchema),
+  updateTaskHandler
+);
+
+router.delete(
+  "/workspaces/:workspaceId/tasks/:id",
+  authenticate,
+  requireWorkspaceMembership,
+  deleteTaskHandler
+);
+
+export default router;
